--- a/printer-board-ebb.cfg
+++ b/printer-board-ebb.cfg
@@ -28,18 +28,26 @@ filament_diameter: 1.750
 heater_pin: ebb:gpio7
 control: pid
 min_temp: 0
-max_temp: 250
+max_temp: 285
 max_extrude_only_distance: 105
 max_extrude_cross_section: 2
-sensor_type: MAX31865
-sensor_pin: ebb:gpio9
-spi_software_sclk_pin: ebb:gpio10
-spi_software_mosi_pin: ebb:gpio8
-spi_software_miso_pin: ebb:gpio11
-rtd_nominal_r: 100
-rtd_reference_r: 430
-rtd_num_of_wires: 2
-pressure_advance: 0.02
+sensor_type: Generic 3950
+sensor_pin: ebb:gpio27
+pressure_advance: 0.045
+pid_kp: 44.059
+pid_ki: 8.393
+pid_kd: 57.826
+
+# Use below for Formbot v6 hotend which is part of the kit
+# Make sure to re-run `PID_CALIBRATE heater=extruder target=220` and replace the pid_* values above
+# sensor_type: MAX31865
+# sensor_pin: ebb:gpio9
+# spi_software_sclk_pin: ebb:gpio10
+# spi_software_mosi_pin: ebb:gpio8
+# spi_software_miso_pin: ebb:gpio11
+# rtd_nominal_r: 100
+# rtd_reference_r: 430
+# rtd_num_of_wires: 2
 
 [tmc2209 extruder]
 uart_pin: ebb:gpio20
@@ -57,7 +65,7 @@ pin: ebb:gpio14
 heater: extruder
 heater_temp: 50.0
 
-[neopixel hotend_rgb]
+[neopixel toolhead_light]
 pin: ebb:gpio16
 chain_count: 3
 color_order: GRBW
