--- a/macros.cfg
+++ b/macros.cfg
@@ -1,9 +1,12 @@
-
-
-
-#####################################################################
-# 	Macros
-#####################################################################
+[delayed_gcode after_startup_1]
+initial_duration: 1.
+gcode:
+  LIGHT_PENDING
+  
+[delayed_gcode after_startup_2]
+initial_duration: 5.
+gcode:
+  LIGHT_OFF
 
 [gcode_macro G32]
 gcode:
@@ -11,23 +14,13 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
-    ##	Uncomment for for your size printer:
-    #--------------------------------------------------------------------
-    ##	Uncomment for 250mm build
-    #G0 X125 Y125 Z30 F3600
-    
-    ##	Uncomment for 300 build
-    #G0 X150 Y150 Z30 F3600
-    
-    ##	Uncomment for 350mm build
-    #G0 X175 Y175 Z30 F3600
-    #--------------------------------------------------------------------
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    LIGHT_PENDING
   	# Start TLM Start G-Code
 	# Clear Display
 	M117
@@ -38,7 +31,7 @@ gcode:
     # Heat bed
     M140 S{BED_TEMP}
     # Home
-	CHOME
+	G32
     #BRUSH_NOZZLE
     M104 S0 # Fan off
     # Heat up Bed
@@ -46,6 +39,7 @@ gcode:
     BED_MESH_CALIBRATE ADAPTIVE=1
 	# Move to side and wait for final temps
     G1 X1 Y10 Z5 F1500
+    GET_POSITION
 	M109 S{EXTRUDER_TEMP}
 	
     G91
@@ -68,7 +62,8 @@ gcode:
 	# Prime Blob disabled because I like doing skirts instead at the momemnt
     
 	NOZZLE_PURGE
-    # LIGHT_PRINTING
+    LIGHT_PRINTING
+    
    
 
 [gcode_macro PRINT_END]
@@ -88,6 +83,8 @@ gcode:
     G90                            ; absolute positioning
     G0  X125 Y250 F3600            ; park nozzle at rear
     BED_MESH_CLEAR
+
+    GET_POSITION
     
     # The purpose of the SAVE_GCODE_STATE/RESTORE_GCODE_STATE
     # command pair is to restore the printer's coordinate system
@@ -95,7 +92,24 @@ gcode:
     # However, to prevent any accidental, unintentional toolhead
     # moves when restoring the state, explicitly set MOVE=0.
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END MOVE=0
+    LIGHT_OFF
 
+[gcode_macro LIGHT_PENDING]
+gcode:
+  SET_LED LED=toolhead_light RED=1 GREEN=0.02 BLUE=0.02 WHITE=0 INDEX=1 TRANSMIT=0
+  SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=2 TRANSMIT=0
+  SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=3 TRANSMIT=1
+
+[gcode_macro LIGHT_PRINTING]
+gcode:
+  SET_LED LED=toolhead_light RED=0 GREEN=0.0 BLUE=0.0 WHITE=0.5
+
+[gcode_macro LIGHT_OFF]
+gcode:
+  SET_LED LED=toolhead_light RED=0 GREEN=0.02 BLUE=0 WHITE=0 INDEX=1 TRANSMIT=0
+  SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=2 TRANSMIT=0
+  SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=3 TRANSMIT=1
+  
 [gcode_macro NOZZLE_PURGE]
 description: Draw a purge line at the front left edge of the build plate
 gcode:
@@ -112,7 +126,7 @@ gcode:
 [gcode_macro CHOME]
 description: Homes XYZ axis only if printer is in a non-homed state
 gcode:
-  {% if "xyz" not in printer.toolhead.homed_axes %}
+  {% if "xyz" not in printer.toolhead.homed_axes or printer["quad_gantry_level"].applied == false %}
     G32
   {% endif %}
 
