--- a/printer.cfg
+++ b/printer.cfg
@@ -2,14 +2,13 @@
 
 [printer]
 kinematics: corexy
-max_velocity: 300  
-max_accel: 6000
+max_velocity: 700  
+max_accel: 12000
 max_z_velocity: 25
 max_z_accel: 350
 square_corner_velocity: 5.0
 
 
-[include printer-board-cb1.cfg]
 [include printer-board-m8p.cfg]
 [include printer-board-ebb.cfg]
 [include macros.cfg]
@@ -17,19 +16,21 @@ square_corner_velocity: 5.0
 [idle_timeout]
 timeout: 1800
 
+[exclude_object]
+
 [force_move] 
 enable_force_move: true
 
 [safe_z_home]
 home_xy_position: 150,150
-speed: 300
+speed: 600
 z_hop: 10
 
 [probe]
 pin: ^ebb:gpio22
 x_offset: 0
 y_offset: 0
-z_offset: -1.900
+#z_offset: -1.900
 lift_speed: 30
 activate_gcode:
     {% set PROBE_TEMP = 150 %}
@@ -53,19 +54,19 @@ gantry_corners:
 	-60,-10
 	360,370
 points:
-	50,25
-	50,225
-	250,225
-	250,25
-speed: 300
-horizontal_move_z: 10
+	25,25
+	25,275
+	275,275
+	275,25
+speed: 600
+horizontal_move_z: 5
 retries: 5
 retry_tolerance: 0.0075
 max_adjust: 10
 
 [bed_mesh]
-speed: 300
-horizontal_move_z: 3
+speed: 600
+horizontal_move_z: 2
 mesh_min: 10,10
 mesh_max: 290,290
 probe_count: 7,7
@@ -74,22 +75,40 @@ mesh_pps: 2, 3
 algorithm: bicubic
 bicubic_tension: 0.2
 
-
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_freq_x = 82.2
+#*# shaper_type_x = mzv
+#*# shaper_freq_x = 49.0
 #*# shaper_type_y = mzv
-#*# shaper_freq_y = 36.0
-#*#
-#*# [extruder]
-#*# pid_kp = 18.983
-#*# pid_ki = 1.140
-#*# pid_kd = 79.013
+#*# shaper_freq_y = 39.4
 #*#
 #*# [heater bed]
 #*# pid_kp = 57.369
 #*# pid_ki = 2.533
 #*# pid_kd = 324.854
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-1.205819, -1.138319, -1.125819, -1.108319, -1.105819, -1.120819, -1.148319
+#*# 	-1.170819, -1.133319, -1.103319, -1.108319, -1.103319, -1.115819, -1.138319
+#*# 	-1.173319, -1.150819, -1.128319, -1.113319, -1.088319, -1.113319, -1.125819
+#*# 	-1.198319, -1.168319, -1.145819, -1.110819, -1.115819, -1.120819, -1.138319
+#*# 	-1.198319, -1.148319, -1.128319, -1.123319, -1.118319, -1.138319, -1.140819
+#*# 	-1.213319, -1.148319, -1.130819, -1.138319, -1.135819, -1.150819, -1.180819
+#*# 	-1.215819, -1.165819, -1.123319, -1.140819, -1.155819, -1.175819, -1.208319
+#*# x_count = 7
+#*# y_count = 7
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 3
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 10.0
+#*# max_x = 289.96
+#*# min_y = 10.0
+#*# max_y = 289.96
+#*#
+#*# [probe]
+#*# z_offset = -1.910
