--- a/macros.cfg
+++ b/macros.cfg
@@ -14,6 +14,14 @@ gcode:
     G28
     QUAD_GANTRY_LEVEL
     G28
+
+[gcode_macro FILTER_ON]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=0.8
+
+[gcode_macro FILTER_OFF]
+gcode:
+    SET_FAN_SPEED FAN=nevermore SPEED=0
    
 [gcode_macro PRINT_START]
 #   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
@@ -55,9 +63,9 @@ gcode:
 	M82
 	# Fan Off
 	M107
-    # {% if BED_TEMP > 90 %}
-    #   FILTER_ON
-    # {% endif %}
+    {% if BED_TEMP > 90 %}
+      FILTER_ON
+    {% endif %}
 
 	# Prime Blob disabled because I like doing skirts instead at the momemnt
     
@@ -93,6 +101,7 @@ gcode:
     # moves when restoring the state, explicitly set MOVE=0.
     RESTORE_GCODE_STATE NAME=STATE_PRINT_END MOVE=0
     LIGHT_OFF
+    FILTER_OFF
 
 [gcode_macro LIGHT_PENDING]
 gcode:
