--- a/printer-board-m8p.cfg
+++ b/printer-board-m8p.cfg
@@ -184,7 +184,7 @@ pid_kd: 363.769
 # 	Fan Control
 #####################################################################
 
-[fan]
+[fan_generic nevermore]
 ##	Print Cooling Fan - CNC_FAN0
 pin: PF7
 kick_start_time: 0.5
@@ -193,22 +193,22 @@ kick_start_time: 0.5
 ##	if your fan is not able to slow down effectively
 off_below: 0.10
 
-[heater_fan hotend_fan]
+[controller_fan controller_fan_1]
 ##	Hotend Fan - CNC_FAN1
 pin: PF9
 max_power: 1.0
 kick_start_time: 0.5
-heater: extruder
-heater_temp: 50.0
+fan_speed: 0.66
 ##	If you are experiencing back flow, you can reduce fan_speed
 #fan_speed: 1.0
 
-[heater_fan controller_fan]
+[heater_fan controller_fan_2]
 ##	Controller fan - CNC_FAN2
 pin: PF6
 kick_start_time: 0.5
 heater: heater_bed
-heater_temp: 45.0
+heater_temp: 80
+fan_speed: 0.66
 
 #[heater_fan exhaust_fan]
 ##	Exhaust fan - CNC_FAN3
