--- a/printer.cfg
+++ b/printer.cfg
@@ -11,20 +11,10 @@ square_corner_velocity: 5.0
 
 [include printer-board-m8p.cfg]
 [include printer-board-ebb.cfg]
+[include printer-extras.cfg]
 [include macros.cfg]
 
-[idle_timeout]
-timeout: 1800
 
-[exclude_object]
-
-[force_move] 
-enable_force_move: true
-
-[safe_z_home]
-home_xy_position: 150,150
-speed: 600
-z_hop: 10
 
 [probe]
 pin: ^ebb:gpio22
@@ -48,6 +38,39 @@ activate_gcode:
             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
         {% endif %}
     {% endif %}
+
+[extruder]
+step_pin: ebb:gpio18
+dir_pin: ebb:gpio19
+enable_pin: !ebb:gpio17
+microsteps: 16
+rotation_distance: 22.905740611
+gear_ratio: 50:10
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: ebb:gpio7
+control: pid
+min_temp: 0
+max_temp: 285
+max_extrude_only_distance: 105
+max_extrude_cross_section: 2
+sensor_type: Generic 3950
+sensor_pin: ebb:gpio27
+pressure_advance: 0.045
+pid_kp: 44.059
+pid_ki: 8.393
+pid_kd: 57.826
+
+# Use below for Formbot v6 hotend which is part of the kit
+# Make sure to re-run `PID_CALIBRATE heater=extruder target=220` and replace the pid_* values above
+# sensor_type: MAX31865
+# sensor_pin: ebb:gpio9
+# spi_software_sclk_pin: ebb:gpio10
+# spi_software_mosi_pin: ebb:gpio8
+# spi_software_miso_pin: ebb:gpio11
+# rtd_nominal_r: 100
+# rtd_reference_r: 430
+# rtd_num_of_wires: 2
 
 [quad_gantry_level]
 gantry_corners:
@@ -74,6 +97,8 @@ adaptive_margin: 5
 mesh_pps: 2, 3
 algorithm: bicubic
 bicubic_tension: 0.2
+
+
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
