--- a/macros.cfg
+++ b/macros.cfg
@@ -39,17 +39,15 @@ gcode:
     # Heat bed
     M140 S{BED_TEMP}
     # Home
-	G32
-    #BRUSH_NOZZLE
-    M104 S0 # Fan off
-    # Heat up Bed
+	G28
+    NOZZLE_PRIME_AND_BRUSH EXTRUDER_TEMP={EXTRUDER_TEMP}
+    G32
+    # Wait for Bed
     M190 S{BED_TEMP}
     BED_MESH_CALIBRATE ADAPTIVE=1
 	# Move to side and wait for final temps
-    G1 X1 Y10 Z5 F1500
-    GET_POSITION
-	M109 S{EXTRUDER_TEMP}
-	
+    M109 S{EXTRUDER_TEMP}
+    G1 X1 Y10 Z5 F3000
     G91
     G1 E25 F3600
     
@@ -66,8 +64,6 @@ gcode:
     {% if BED_TEMP > 90 %}
       FILTER_ON
     {% endif %}
-
-	# Prime Blob disabled because I like doing skirts instead at the momemnt
     
 	NOZZLE_PURGE
     LIGHT_PRINTING
@@ -108,25 +104,51 @@ gcode:
   SET_LED LED=toolhead_light RED=1 GREEN=0.02 BLUE=0.02 WHITE=0 INDEX=1 TRANSMIT=0
   SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=2 TRANSMIT=0
   SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=3 TRANSMIT=1
+  SET_PIN PIN=caselight VALUE=0
 
 [gcode_macro LIGHT_PRINTING]
 gcode:
   SET_LED LED=toolhead_light RED=0 GREEN=0.0 BLUE=0.0 WHITE=0.5
+  SET_PIN PIN=caselight VALUE=0.8
 
 [gcode_macro LIGHT_OFF]
 gcode:
   SET_LED LED=toolhead_light RED=0 GREEN=0.02 BLUE=0 WHITE=0 INDEX=1 TRANSMIT=0
   SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=2 TRANSMIT=0
   SET_LED LED=toolhead_light RED=0 GREEN=0 BLUE=0 WHITE=0 INDEX=3 TRANSMIT=1
-  
+  SET_PIN PIN=caselight VALUE=0
+
+[gcode_macro NOZZLE_PRIME_AND_BRUSH]
+gcode:
+   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+
+  # Move over bucker
+  G0 X298 Y303 Z10 F9000
+
+  # Purge
+  M104 S{EXTRUDER_TEMP}
+  TEMPERATURE_WAIT sensor=extruder MINIMUM={EXTRUDER_TEMP-5} MAXIMUM={EXTRUDER_TEMP+5}
+  M83  
+  G1 E50 F500
+  G1 E-5  F500
+  M104 S150
+
+  # Brush
+  {% for i in range(10) %}
+    G0 X238 Y299 F5000
+    G0 X278 Y302 F5000
+  {% endfor %}
+
+  G0 Y290 F3000
+
 [gcode_macro NOZZLE_PURGE]
 description: Draw a purge line at the front left edge of the build plate
 gcode:
   CHOME
-  G0 X2.5 Y2 F3000 ; Go to front
+  G0 X2.5 Y2 F6000 ; Go to front
   G0 Z0.2 ; Drop to bed
   M83 ; Set extruder to relative mode
-  G1 X25 E15 F500 ; Extrude 25mm of filament in a 4cm line
+  G1 X25 E10 F500 ; Extrude 25mm of filament in a 4cm line
   G1 X50 F5000 ; Quickly wipe away from the filament line
   G1 X75 E2.00 F1500
   G1 E-0.1 F400 ; Retract a little
