--- a/printer-board-ebb.cfg
+++ b/printer-board-ebb.cfg
@@ -38,6 +38,6 @@ pin: ebb:gpio16
 chain_count: 3
 color_order: GRBW
     
-[filament_switch_sensor my_sensor]
+[filament_switch_sensor filament_sensor]
 pause_on_runout: false
 switch_pin: ^ebb:gpio21
