--- a/printer-board-m8p.cfg
+++ b/printer-board-m8p.cfg
@@ -7,14 +7,7 @@
 # See docs/Config_Reference.md for a description of parameters.
 
 [mcu]
-##	[X in MOTOR1] - B Motor
-##	[Y in MOTOR2] - A Motor
-##	[E in MOTOR8] - Extruder
-##	Obtain definition by "ls /dev/serial/by-id/*" then unplug to verify
-##--------------------------------------------------------------------
 canbus_uuid: f8bbc90dfa2d
-#restart_method: command
-##--------------------------------------------------------------------
 
 [temperature_sensor MCU]
 sensor_type: temperature_mcu
@@ -33,12 +26,12 @@ dir_pin: PD7
 enable_pin: !PG11
 microsteps: 16
 rotation_distance: 40
-full_steps_per_rotation:200  #set to 400 for 0.9 degree stepper
+full_steps_per_rotation:200  
 endstop_pin: ^ebb:gpio24
 position_min: 0
 position_endstop: 300
-position_max: 300
-homing_speed: 100   #Max 100
+position_max: 300                 # ADJUST: 250 build (250) and 350 build (300)
+homing_speed: 100                 
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -61,9 +54,9 @@ rotation_distance: 40
 endstop_pin: ^PF3
 full_steps_per_rotation:200 
 position_min: 0
-position_endstop: 300
-position_max: 300
-homing_speed: 100  #Max 100
+position_endstop: 303             # ADJUST: 250 build (253) and 350 build (353)
+position_max: 303                 # ADJUST: 250 build (253) and 350 build (353)
+homing_speed: 100
 homing_retract_dist: 5
 homing_positive_dir: true
 
@@ -186,7 +179,7 @@ pid_kd: 363.769
 
 [fan_generic nevermore]
 ##	Print Cooling Fan - CNC_FAN0
-pin: PF7
+pin: PF8
 kick_start_time: 0.5
 ##	Depending on your fan, you may need to increase this value
 ##	if your fan will not start. Can change cycle_time (increase)
@@ -210,15 +203,12 @@ heater: heater_bed
 heater_temp: 80
 fan_speed: 0.66
 
-#[heater_fan exhaust_fan]
-##	Exhaust fan - CNC_FAN3
-#pin: PF8
-#max_power: 1.0
-#shutdown_speed: 0.0
-#kick_start_time: 5.0
-#heater: heater_bed
-#heater_temp: 60
-#fan_speed: 1.0
+[fan_generic exhaust_fan]
+#	Exhaust fan - CNC_FAN0
+pin: PF7
+max_power: 1.0
+shutdown_speed: 0.0
+kick_start_time: 5.0
 
 #[heater_fan fan4]
 #pin: PA4
@@ -235,10 +225,10 @@ fan_speed: 0.66
 # 	LED Control
 #####################################################################
 
-#[output_pin caselight]
-# Chamber Lighting - HE2 Connector (Optional)
-#pin: PA3
-#pwm:true
-#shutdown_value: 0
-#value:1
-#cycle_time: 0.01
+[output_pin caselight]
+#Chamber Lighting - HE3 Connector
+pin: PA5
+pwm:true
+shutdown_value: 0
+value:1
+cycle_time: 0.01
