--- a/printer.cfg
+++ b/printer.cfg
@@ -5,7 +5,7 @@ kinematics: corexy
 max_velocity: 700  
 max_accel: 12000
 max_z_velocity: 25
-max_z_accel: 350
+max_z_accel: 250
 square_corner_velocity: 5.0
 
 
@@ -54,25 +54,32 @@ min_temp: 0
 max_temp: 285
 max_extrude_only_distance: 105
 max_extrude_cross_section: 2
-sensor_type: Generic 3950
-sensor_pin: ebb:gpio27
-pressure_advance: 0.045
-pid_kp: 44.059
-pid_ki: 8.393
-pid_kd: 57.826
 
-# Use below for Formbot v6 hotend which is part of the kit
-# Make sure to re-run `PID_CALIBRATE heater=extruder target=220` and replace the pid_* values above
-# sensor_type: MAX31865
-# sensor_pin: ebb:gpio9
-# spi_software_sclk_pin: ebb:gpio10
-# spi_software_mosi_pin: ebb:gpio8
-# spi_software_miso_pin: ebb:gpio11
-# rtd_nominal_r: 100
-# rtd_reference_r: 430
-# rtd_num_of_wires: 2
+# v6 hotend configuration
+sensor_type: MAX31865
+sensor_pin: ebb:gpio9
+spi_software_sclk_pin: ebb:gpio10
+spi_software_mosi_pin: ebb:gpio8
+spi_software_miso_pin: ebb:gpio11
+rtd_nominal_r: 100
+rtd_reference_r: 430
+rtd_num_of_wires: 2
+
+# Dragon hotend configuration
+# TODO
 
 [quad_gantry_level]
+# ADJUST: 250 build
+#gantry_corners:
+#	-60,-10
+#	310, 320
+#points:
+#	25,25
+#	25,225
+#	225,225
+#	225,25
+
+# 300 build
 gantry_corners:
 	-60,-10
 	360,370
@@ -81,17 +88,33 @@ points:
 	25,275
 	275,275
 	275,25
-speed: 600
+
+# ADJUST: 350 build
+# gantry_corners:
+# 	-60,-10
+# 	410,420
+# points:
+# 	25,25
+# 	25,325
+# 	325,325
+# 	325,25
+
+speed: 350
 horizontal_move_z: 5
 retries: 5
 retry_tolerance: 0.0075
 max_adjust: 10
 
 [bed_mesh]
-speed: 600
+speed: 350
 horizontal_move_z: 2
 mesh_min: 10,10
+# ADJUST: 250 build
+#mesh_max: 240,240
+# 300 build
 mesh_max: 290,290
+# ADJUST: 350 build
+#mesh_max: 340,340
 probe_count: 7,7
 adaptive_margin: 5
 mesh_pps: 2, 3
