--- a/printer.cfg
+++ b/printer.cfg
@@ -8,36 +8,32 @@ max_z_velocity: 25
 max_z_accel: 250
 square_corner_velocity: 5.0
 
-
 [include printer-board-m8p.cfg]
 [include printer-board-ebb.cfg]
 [include printer-extras.cfg]
 [include macros.cfg]
 
+[stepper_x]
+# ADJUST 250 buid
+# position_endstop: 250
+# position_max: 250
 
+# 300 build
+position_endstop: 300
+position_max: 300  
 
-[probe]
-pin: ^ebb:gpio22
-x_offset: 0
-y_offset: 0
-#z_offset: -1.900
-lift_speed: 30
-activate_gcode:
-    {% set PROBE_TEMP = 150 %}
-    {% set MAX_TEMP = PROBE_TEMP + 5 %}
-    {% set ACTUAL_TEMP = printer.extruder.temperature %}
-    {% set TARGET_TEMP = printer.extruder.target %}
+[stepper_y]
+# ADJUST 250 buid
+# position_endstop: 253
+# position_max: 250
 
-    {% if TARGET_TEMP > PROBE_TEMP %}
-        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
-        M109 S{ PROBE_TEMP }
-    {% else %}
-        # Temperature target is already low enough, but nozzle may still be too hot.
-        {% if ACTUAL_TEMP > MAX_TEMP %}
-            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
-            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
-        {% endif %}
-    {% endif %}
+# 300 build
+position_endstop: 303
+position_max: 300  
+
+# ADJUST 350 buid
+# position_endstop: 353
+# position_max: 350
 
 [extruder]
 step_pin: ebb:gpio18
@@ -54,6 +50,9 @@ min_temp: 0
 max_temp: 285
 max_extrude_only_distance: 105
 max_extrude_cross_section: 2
+pid_kp: 57.369
+pid_ki: 2.533
+pid_kd: 324.854
 
 # v6 hotend configuration
 sensor_type: MAX31865
@@ -120,6 +119,29 @@ adaptive_margin: 5
 mesh_pps: 2, 3
 algorithm: bicubic
 bicubic_tension: 0.2
+
+[probe]
+pin: ^ebb:gpio22
+x_offset: 0
+y_offset: 0
+#z_offset: -1.900
+lift_speed: 30
+activate_gcode:
+    {% set PROBE_TEMP = 150 %}
+    {% set MAX_TEMP = PROBE_TEMP + 5 %}
+    {% set ACTUAL_TEMP = printer.extruder.temperature %}
+    {% set TARGET_TEMP = printer.extruder.target %}
+
+    {% if TARGET_TEMP > PROBE_TEMP %}
+        { action_respond_info('Extruder temperature target of %.1fC is too high, lowering to %.1fC' % (TARGET_TEMP, PROBE_TEMP)) }
+        M109 S{ PROBE_TEMP }
+    {% else %}
+        # Temperature target is already low enough, but nozzle may still be too hot.
+        {% if ACTUAL_TEMP > MAX_TEMP %}
+            { action_respond_info('Extruder temperature %.1fC is still too high, waiting until below %.1fC' % (ACTUAL_TEMP, MAX_TEMP)) }
+            TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
+        {% endif %}
+    {% endif %}
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
