Add missing 350 config

--- a/printer.cfg
+++ b/printer.cfg
@@ -20,7 +20,11 @@ square_corner_velocity: 5.0
 
 # 300 build
 position_endstop: 300
-position_max: 300  
+position_max: 300 
+
+# ADJUST 350 buid
+# position_endstop: 350
+# position_max: 350
 
 [stepper_y]
 # ADJUST 250 buid
