--- a/printer.cfg
+++ b/printer.cfg
@@ -51,7 +51,7 @@ filament_diameter: 1.750
 heater_pin: ebb:gpio7
 control: pid
 min_temp: 0
-max_temp: 285
+max_temp: 250 # ADJUST for Dragon hotend: 285
 max_extrude_only_distance: 105
 max_extrude_cross_section: 2
 pid_kp: 57.369
