--- a/printer.cfg
+++ b/printer.cfg
@@ -1,17 +1,29 @@
 [include mainsail.cfg]
-
-[printer]
-kinematics: corexy
-max_velocity: 700  
-max_accel: 12000
-max_z_velocity: 25
-max_z_accel: 250
-square_corner_velocity: 5.0
-
 [include printer-board-m8p.cfg]
 [include printer-board-ebb.cfg]
 [include printer-extras.cfg]
 [include macros.cfg]
+
+
+
+
+
+##########################################################################################################################################
+##########################################################################################################################################
+##########################################################################################################################################
+# 	Basic config, need to check!
+##########################################################################################################################################
+##########################################################################################################################################
+##########################################################################################################################################
+
+
+# M8P 
+[mcu]
+canbus_uuid: f8bbc90dfa2d #CANBUS ID FOR M8P here replace with yours
+
+# SB2209
+[mcu ebb]
+canbus_uuid: ef0499b67b66 #CANBUS ID FOR SB2209 here, replace with yours
 
 [stepper_x]
 # ADJUST 250 buid
@@ -40,31 +52,7 @@ position_max: 300
 # position_max: 350
 
 [extruder]
-step_pin: ebb:gpio18
-dir_pin: ebb:gpio19
-enable_pin: !ebb:gpio17
-microsteps: 16
-rotation_distance: 22.905740611
-gear_ratio: 50:10
-nozzle_diameter: 0.400
-filament_diameter: 1.750
-heater_pin: ebb:gpio7
-control: pid
-min_temp: 0
 max_temp: 250 # ADJUST for Dragon hotend: 285
-max_extrude_only_distance: 105
-max_extrude_cross_section: 2
-pid_kp: 57.369
-pid_ki: 2.533
-pid_kd: 324.854
-sensor_type: MAX31865
-sensor_pin: ebb:gpio9
-spi_software_sclk_pin: ebb:gpio10
-spi_software_mosi_pin: ebb:gpio8
-spi_software_miso_pin: ebb:gpio11
-rtd_nominal_r: 100
-rtd_reference_r: 430
-rtd_num_of_wires: 2
 
 [quad_gantry_level]
 # ADJUST: 250 build
@@ -119,6 +107,100 @@ mesh_pps: 2, 3
 algorithm: bicubic
 bicubic_tension: 0.2
 
+
+
+
+
+
+
+
+#####################################################################
+# 	TMC autotune for silent and strong steppers
+#####################################################################
+
+
+
+
+
+
+
+# Uncomment below after installing the TMC autotune plugin
+# https://github.com/andrewmcgr/klipper_tmc_autotune
+#
+# [autotune_tmc extruder]
+# motor: moons-cse14hra1l410a
+#
+# [autotune_tmc stepper_x]
+# motor: moons-ms17hd6p420I-05
+#
+# [autotune_tmc stepper_y]
+# motor: moons-ms17hd6p420I-05
+#
+# [autotune_tmc stepper_z]
+# motor: moons-ms17hd6p420I-05
+#
+# [autotune_tmc stepper_z1]
+# motor: moons-ms17hd6p420I-05
+#
+# [autotune_tmc stepper_z2]
+# motor: moons-ms17hd6p420I-05
+#
+# [autotune_tmc stepper_z3]
+# motor: moons-ms17hd6p420I-05
+
+
+
+
+
+
+
+##########################################################################################################################################
+##########################################################################################################################################
+##########################################################################################################################################
+# 	Advanced config, not needed to edit for basic build
+##########################################################################################################################################
+##########################################################################################################################################
+##########################################################################################################################################
+
+
+
+
+#####################################################################
+# 	MISC
+#####################################################################
+
+
+[printer]
+kinematics: corexy
+max_velocity: 700  
+max_accel: 12000
+max_z_velocity: 25
+max_z_accel: 250
+square_corner_velocity: 5.0
+
+[idle_timeout]
+timeout: 1800
+
+[exclude_object]
+
+[force_move] 
+enable_force_move: true
+
+[safe_z_home]
+home_xy_position: 150,150
+speed: 600
+z_hop: 10
+
+[temperature_sensor MCU]
+sensor_type: temperature_mcu
+
+[temperature_sensor SoC]
+sensor_type: temperature_host
+
+[temperature_sensor EBB_NTC]
+sensor_type: Generic 3950
+sensor_pin: ebb:gpio28
+
 [probe]
 pin: ^ebb:gpio22
 x_offset: 0
@@ -141,6 +223,266 @@ activate_gcode:
             TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={ MAX_TEMP }
         {% endif %}
     {% endif %}
+
+#####################################################################
+# 	X/Y Stepper Settings
+#####################################################################
+
+## X Stepper on Motor1(B Motor)
+[stepper_x]
+step_pin: PG9
+dir_pin: PD7
+enable_pin: !PG11
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation:200  
+endstop_pin: ^ebb:gpio24
+position_min: 0
+homing_speed: 100                 
+homing_retract_dist: 5
+homing_positive_dir: true
+
+[tmc2209 stepper_x]
+uart_pin: PG10
+interpolate: True
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 0
+
+[stepper_y]
+step_pin: PG13
+dir_pin: PG12
+enable_pin: !PG15
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^PF3
+full_steps_per_rotation:200 
+position_min: 0
+homing_speed: 100
+homing_retract_dist: 5
+homing_positive_dir: true
+
+[tmc2209 stepper_y]
+uart_pin: PG14
+interpolate: True
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 0
+
+
+#####################################################################
+# 	Z Stepper Settings
+#####################################################################
+
+## Z0 Stepper - Front Left on MOTOR3_A
+[stepper_z]
+step_pin: PE6
+dir_pin: PE5
+enable_pin: !PC14
+rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 16
+endstop_pin: probe:z_virtual_endstop
+position_max: 290
+position_min: -10
+homing_speed: 8
+second_homing_speed: 3
+homing_retract_dist: 3
+
+[tmc2209 stepper_z]
+uart_pin: PC13
+interpolate: true
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 1
+
+##	Z1 Stepper - Rear Left on Motor5
+[stepper_z1]
+step_pin: PE2
+dir_pin: !PE1
+enable_pin: !PE4
+rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 16
+
+[tmc2209 stepper_z1]
+uart_pin: PE3
+interpolate: true
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 1
+
+[stepper_z2]
+step_pin: PB8
+dir_pin: PB7
+enable_pin: !PE0
+rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 16
+
+[tmc2209 stepper_z2]
+uart_pin: PB9
+interpolate: true
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 1
+
+[stepper_z3]
+step_pin: PB4
+dir_pin: !PB3
+enable_pin: !PB6
+rotation_distance: 40
+gear_ratio: 80:16
+microsteps: 16
+
+[tmc2209 stepper_z3]
+uart_pin: PB5
+interpolate: true
+run_current: 0.8
+sense_resistor: 0.110
+stealthchop_threshold: 1
+
+
+#####################################################################
+# 	Bed Heater
+#####################################################################
+
+[heater_bed]
+heater_pin: PA1
+sensor_type: Generic 3950
+sensor_pin: PB1
+max_power: 1.0
+min_temp: 0
+max_temp: 120
+control: pid
+pid_kp: 58.437
+pid_ki: 2.347
+pid_kd: 363.769
+
+
+#####################################################################
+# 	Fan Control
+#####################################################################
+
+[fan_generic nevermore]
+##	Print Cooling Fan - CNC_FAN0
+pin: PF8
+kick_start_time: 0.5
+##	Depending on your fan, you may need to increase this value
+##	if your fan will not start. Can change cycle_time (increase)
+##	if your fan is not able to slow down effectively
+off_below: 0.10
+
+[controller_fan controller_fan_1]
+##	Hotend Fan - CNC_FAN1
+pin: PF9
+max_power: 1.0
+kick_start_time: 0.5
+fan_speed: 0.66
+##	If you are experiencing back flow, you can reduce fan_speed
+#fan_speed: 1.0
+
+[heater_fan controller_fan_2]
+##	Controller fan - CNC_FAN2
+pin: PF6
+kick_start_time: 0.5
+heater: heater_bed
+heater_temp: 80
+fan_speed: 0.66
+
+[fan_generic exhaust_fan]
+#	Exhaust fan - CNC_FAN0
+pin: PF7
+max_power: 1.0
+shutdown_speed: 0.0
+kick_start_time: 5.0
+
+#[heater_fan fan4]
+#pin: PA4
+
+#[heater_fan fan5]
+#pin: PA6
+#tachometer_pin: PC2
+
+#[heater_fan fan6]
+#pin: PA2
+#tachometer_pin: PC1
+
+#####################################################################
+# 	LED Control
+#####################################################################
+
+[output_pin caselight]
+#Chamber Lighting - HE3 Connector
+pin: PA5
+pwm:true
+shutdown_value: 0
+value:1
+cycle_time: 0.01
+
+#####################################################################
+# 	Extruder
+#####################################################################
+
+[adxl345]
+cs_pin: ebb:gpio1
+spi_software_sclk_pin: ebb:gpio2
+spi_software_mosi_pin: ebb:gpio0
+spi_software_miso_pin: ebb:gpio3
+axes_map: z,-y,x
+
+[resonance_tester]
+probe_points: 100, 100, 20
+accel_chip: adxl345
+
+[extruder]
+step_pin: ebb:gpio18
+dir_pin: ebb:gpio19
+enable_pin: !ebb:gpio17
+microsteps: 16
+rotation_distance: 22.905740611
+gear_ratio: 50:10
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: ebb:gpio7
+control: pid
+min_temp: 0
+max_extrude_only_distance: 105
+max_extrude_cross_section: 2
+pid_kp: 57.369
+pid_ki: 2.533
+pid_kd: 324.854
+sensor_type: MAX31865
+sensor_pin: ebb:gpio9
+spi_software_sclk_pin: ebb:gpio10
+spi_software_mosi_pin: ebb:gpio8
+spi_software_miso_pin: ebb:gpio11
+rtd_nominal_r: 100
+rtd_reference_r: 430
+rtd_num_of_wires: 2
+
+[tmc2209 extruder]
+uart_pin: ebb:gpio20
+run_current: 0.650
+stealthchop_threshold: 999999
+
+[fan]
+pin: ebb:gpio13
+
+[heater_fan hotend_fan]
+pin: ebb:gpio14
+heater: extruder
+heater_temp: 70.0
+
+[neopixel toolhead_light]
+pin: ebb:gpio16
+chain_count: 3
+color_order: GRBW
+    
+[filament_switch_sensor filament_sensor]
+pause_on_runout: false
+switch_pin: ^ebb:gpio21
+
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
