--- a/printer.cfg
+++ b/printer.cfg
@@ -41,15 +41,15 @@ position_max: 300
 [stepper_y]
 # ADJUST 250 buid
 # position_endstop: 253
-# position_max: 250
+# position_max: 253
 
 # 300 build
 position_endstop: 303
-position_max: 300  
+position_max: 3003 
 
 # ADJUST 350 buid
 # position_endstop: 353
-# position_max: 350
+# position_max: 353
 
 [extruder]
 max_temp: 250 # ADJUST for Dragon hotend: 285
@@ -274,7 +274,7 @@ stealthchop_threshold: 0
 # 	Z Stepper Settings
 #####################################################################
 
-## Z0 Stepper - Front Left on MOTOR3_A
+## Z0 Stepper - Check wiring diagaram in PDF guide on GitHub!
 [stepper_z]
 step_pin: PE6
 dir_pin: PE5
@@ -296,7 +296,7 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 1
 
-##	Z1 Stepper - Rear Left on Motor5
+##	Z1 Stepper - Check wiring diagaram in PDF guide on GitHub!
 [stepper_z1]
 step_pin: PE2
 dir_pin: !PE1
@@ -312,6 +312,7 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 1
 
+##	Z2 Stepper - Check wiring diagaram in PDF guide on GitHub!
 [stepper_z2]
 step_pin: PB8
 dir_pin: PB7
@@ -327,6 +328,7 @@ run_current: 0.8
 sense_resistor: 0.110
 stealthchop_threshold: 1
 
+##	Z3 Stepper - Check wiring diagaram in PDF guide on GitHub!
 [stepper_z3]
 step_pin: PB4
 dir_pin: !PB3
