--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ printer-20*.cfg
 .DS_STORE
 crowsnest.conf
 KlipperScreen.conf
-mainsail.conf
-timelapse.conf
-sonar.conf
+mainsail.cfg
+timelapse.cfg
+sonar.cfg
