--- a/printer.cfg
+++ b/printer.cfg
@@ -42,21 +42,31 @@ position_max: 300
 
 # 300 build
 position_endstop: 303
-position_max: 3003 
+position_max: 303 
 
 # ADJUST 350 buid
 # position_endstop: 353
 # position_max: 353
+
+[stepper_z]
+# ADJUST 250 buid
+# position_max: 240
+
+# 300 build
+position_max: 290
+
+# ADJUST 350 buid
+# position_max: 340
 
 [extruder]
 max_temp: 250 # ADJUST for Dragon hotend: 285
 
 [quad_gantry_level]
 # ADJUST: 250 build
-#gantry_corners:
+# gantry_corners:
 #	-60,-10
 #	310, 320
-#points:
+# points:
 #	25,25
 #	25,225
 #	225,225
@@ -82,32 +92,35 @@ points:
 # 	325,325
 # 	325,25
 
-speed: 350
-horizontal_move_z: 5
-retries: 5
-retry_tolerance: 0.0075
-max_adjust: 10
+[safe_z_home]
+# ADJUST: 250 build
+# home_xy_position: 125,125
+
+# 300 build
+home_xy_position: 150, 150
+
+# ADJUST: 350 build
+# home_xy_position: 175,175
 
 [bed_mesh]
-speed: 350
-horizontal_move_z: 2
-mesh_min: 10,10
 # ADJUST: 250 build
 #mesh_max: 240,240
+
 # 300 build
 mesh_max: 290,290
+
 # ADJUST: 350 build
 #mesh_max: 340,340
-probe_count: 7,7
-adaptive_margin: 5
-mesh_pps: 2, 3
-algorithm: bicubic
-bicubic_tension: 0.2
 
+[resonance_tester]
+# ADJUST: 250 build
+# probe_points: 125, 125, 20
 
+# 300 build
+probe_points: 150, 150, 20
 
-
-
+# ADJUST: 350 build
+# probe_points: 175, 175, 20
 
 
 
@@ -115,13 +128,8 @@ bicubic_tension: 0.2
 # 	TMC autotune for silent and strong steppers
 #####################################################################
 
-
-
-
-
-
-
 # Uncomment below after installing the TMC autotune plugin
+# This is optional but recommended
 # https://github.com/andrewmcgr/klipper_tmc_autotune
 
 # [autotune_tmc extruder]
@@ -184,9 +192,18 @@ timeout: 1800
 enable_force_move: true
 
 [safe_z_home]
-home_xy_position: 150,150
 speed: 600
 z_hop: 10
+
+[bed_mesh]
+speed: 350
+horizontal_move_z: 2
+mesh_min: 10,10
+probe_count: 7,7
+adaptive_margin: 5
+mesh_pps: 2, 3
+algorithm: bicubic
+bicubic_tension: 0.2
 
 [temperature_sensor MCU]
 sensor_type: temperature_mcu
@@ -197,6 +214,13 @@ sensor_type: temperature_host
 [temperature_sensor EBB_NTC]
 sensor_type: Generic 3950
 sensor_pin: ebb:gpio28
+
+[quad_gantry_level]
+speed: 350
+horizontal_move_z: 5
+retries: 5
+retry_tolerance: 0.0075
+max_adjust: 10
 
 [probe]
 pin: ^ebb:gpio22
@@ -280,7 +304,6 @@ rotation_distance: 40
 gear_ratio: 80:16
 microsteps: 16
 endstop_pin: probe:z_virtual_endstop
-position_max: 290
 position_min: -10
 homing_speed: 8
 second_homing_speed: 3
@@ -416,7 +439,6 @@ kick_start_time: 5.0
 pin: PA5
 pwm:true
 shutdown_value: 0
-value:1
 cycle_time: 0.01
 
 #####################################################################
@@ -431,7 +453,6 @@ spi_software_miso_pin: ebb:gpio3
 axes_map: z,-y,x
 
 [resonance_tester]
-probe_points: 100, 100, 20
 accel_chip: adxl345
 
 [extruder]
