Disable nozzle brush by default

--- a/macros.cfg
+++ b/macros.cfg
@@ -24,10 +24,10 @@ gcode:
     SET_FAN_SPEED FAN=nevermore SPEED=0
    
 [gcode_macro PRINT_START]
-#   Use PRINT_START for the slicer starting script - please customise for your slicer of choice
 gcode:
     {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
     {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+    {% set BRUSH_NOZZLE = params.BRUSH_NOZZLE|default(0)|float %}
     LIGHT_PENDING
   	# Start TLM Start G-Code
 	# Clear Display
@@ -38,9 +38,11 @@ gcode:
 	M221 S100
     # Heat bed
     M140 S{BED_TEMP}
-    # Home
-	G28
-    NOZZLE_PRIME_AND_BRUSH EXTRUDER_TEMP={EXTRUDER_TEMP}
+    # Brush nozzle if enabled by param
+    {% if BRUSH_NOZZLE > 0 %}
+	    G28
+        NOZZLE_PRIME_AND_BRUSH EXTRUDER_TEMP={EXTRUDER_TEMP}
+    {% endif %}
     G32
     # Wait for Bed
     M190 S{BED_TEMP}
